# streamlit-nlp-annotator

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  package-lock.json  pyproject.toml
streamlit-nlp-annotator/: README.md  example.py  pyproject.toml
streamlit-nlp-annotator/streamlit_nlp_annotator/: pyproject.toml
streamlit-nlp-annotator/streamlit_nlp_annotator/frontend/: package-lock.json
streamlit-nlp-annotator/streamlit_nlp_annotator/frontend/src/: NLPAnnotator.tsx
streamlit-nlp-annotator/streamlit_nlp_annotator/frontend/src/components/: AnnotationDeleteMenu.tsx
streamlit-nlp-annotator/streamlit_nlp_annotator/frontend/src/types/: types.tsx
streamlit_nlp_annotator/: __init__.py  pyproject.toml
streamlit_nlp_annotator/frontend/: package-lock.json  package.json
streamlit_nlp_annotator/frontend/src/: NLPAnnotator.css  NLPAnnotator.tsx  index.tsx
streamlit_nlp_annotator/frontend/src/components/: AnnotatedText.tsx  LabelChips.tsx  SelectionMenu.tsx
streamlit_nlp_annotator/frontend/src/types/: types.ts
streamlit_nlp_annotator/frontend/src/utils/: annotationUtils.ts  labelColorUtils.ts  selectionUtils.ts  stylingUtils.ts
