[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-nlp-annotator"
version = "1.0.2"
description = "A Streamlit component for interactive text annotation."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Corrado Fasana", email = "ingcorradofasana@hotmail.com" }
]
dependencies = [
  "streamlit>=1.51"
]
keywords = ["streamlit", "nlp", "annotation", "text-labeling"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cfasana/streamlit-nlp-annotator"
Repository = "https://github.com/cfasana/streamlit-nlp-annotator"
Issues = "https://github.com/cfasana/streamlit-nlp-annotator/issues"

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools]
packages = ["streamlit_nlp_annotator"]
include-package-data = true

[tool.setuptools.package-data]
streamlit_nlp_annotator = [
  "frontend/build/**/*",
  "pyproject.toml",
]

[tool.setuptools.exclude-package-data]
streamlit_nlp_annotator = [
    "frontend/node_modules/**/*",
    "frontend/src/**/*",
    "frontend/package-lock.json",
    "frontend/package.json",
    "frontend/tsconfig.json",
    "frontend/vite.config.ts",
    "frontend/vitest.config.ts",
    "frontend/.gitignore",
]